# heap-inspector-dep

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: build-vercel.yml  devskim-analysis.yml  rust.yml
src/: analysis.rs  analysis_impl.rs  graph.rs  index.html  lib.rs  main.rs  reader.rs  result.rs  snapshot.rs  snapshot_parser.rs  snapshot_provider.rs  utils.rs
src/analysis/: analysis_cls.rs  analysis_cls_impl.rs  mod.rs  result_define.rs
src/analytics/: consts.rs  mapping.rs  mod.rs  provider.rs
src/analyzer/: analyzer.rs  consts.rs  meta.rs  mod.rs  parse.rs  search.rs  snapshot.rs  statistics.rs
src/analyzer/api/: constructors.rs  meta.rs  mod.rs  search.rs  statistics.rs
src/analyzer/snapshot/: consts.rs  definition.rs  deserialization.rs  mod.rs  provider.rs  serde_mapping.rs
src/commands/: local.rs  mod.rs  realtime.rs  workbench.rs
src/commands/local/: local.rs  local_command.rs  mod.rs  thread.rs
src/commands/realtime/: mod.rs  realtime_command.rs
src/commands/workbench/: mod.rs
src/decode_snapshot/: decode.rs  mod.rs  snapshot_define.rs  snapshot_provider.rs
src/deserialization_snapshot/: deserialization.rs  match_data.rs  match_snapshot.rs  match_strings.rs  mod.rs  utils.rs
src/utils/: browser.rs  consts.rs  http.rs  log.rs  logger.rs  mod.rs  search.rs  time_count.rs  webpage.rs
test/: json.test.ts
wasm/: Cargo.toml
wasm/snapshot_parser/: Cargo.toml
wasm/snapshot_parser/src/: consts.rs  lib.rs  reader.rs  snapshot.rs  snapshot_parser.rs  snapshot_provider.rs
wasm/snapshot_parser/tests/: test.rs
wasm/src/: __dcc.rs  analysis.rs  analysis_impl.rs  filter.rs  lib.rs  log.rs  result.rs  search.rs  utils.rs
web/: background.ts  index.html  index.tsx  json.ts  startup.tsx  web.html  web.ts  web.tsx  workbench.tsx  worker.ts
web/atoms/: icon.tsx
web/common/: api.ts  color.ts  di.ts  i18n.ts  index.ts  utils.ts
web/i18n/: index.ts  zh.json
web/page/: bootstrap.tsx  index.tsx  page.html  progress.less  progress.tsx  workbench.less  workbench.service.ts  workbench.tsx
web/page/canvas/: index.tsx  style.less
web/page/canvas/omnibox/: block.tsx  filter.tsx  index.tsx  meta.tsx  omniService.ts
web/page/progress/: ProgressView.tsx  index.ts  style.less
web/page/workbench/: OmniPanel.tsx  index.tsx  state.ts  style.less
web/pages/: index.ts
web/pages/icon/: icon.less  index.tsx
web/pages/logo/: index.tsx
web/pages/statistics/: index.tsx  style.less  view.tsx
web/pages/theme/: index.tsx  style.less
web/service/: LogService.ts  ParserService.ts  RenderService.ts  SnapshotService.ts  ThreadService.ts  ViewModel.ts  apiService.ts  index.ts  type.ts  utils.ts  workbenchService.ts
web/types/: filter.ts  index.ts  threadAPI.ts  ui.ts  workerEvent.ts
web/ui/: Canvas.tsx  FilterPanel.tsx  Header.tsx  canvas.tsx  header.tsx  index.tsx  panel.tsx  style.less
web/ui/atoms/: FilterRow.tsx  Panel.tsx  button.tsx  index.ts
web/ui/parts/: FilterPanel.tsx  InfoPanel.tsx  index.ts
web/util/: di.ts  index.ts  view.ts
web/workbench/: index.tsx  style.less  workbench.tsx
web/workbench/canvas/: canvas.less  canvas.tsx
web/workbench/contributions/: IWorkbenchPageContribution.ts  index.ts
web/workbench/main/: index.tsx  style.less
web/workbench/omnibox/: filter.tsx  index.tsx  meta.tsx  omniService.ts  omnibox.less
web/workbench/sidebar/: index.tsx  style.less
web/workbenchx/: index.tsx  workbench.less  workbench.tsx
web/workbenchx/canvas/: canvas.service.ts  canvas.tsx
web/workbenchx/omnibox/: block.tsx  filter.tsx  index.tsx  meta.tsx  omniService.ts  repeated_string.tsx
