[package]
name = "heap-inspector"
version = "0.0.4"
edition = "2021"
description = "heap-inspector"
license = "AGPL-3.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "dist/*"
]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
open = "3.2.0"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.89" }
warp = "0.3.3"
include_dir = "0.7.3"
portpicker = "0.1.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde_qs = "0.10.1"


[[bin]]
name = "heap-inspector"
include = ["dist", "Cargo.toml", "src"]
