[package]
name = "heap-inspector"
version = "0.0.4"
edition = "2021"
description = "heap-inspector"
license = "AGPL-3.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "dist/*"
]

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
open = "4.0.0"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
warp = "0.3.3"
include_dir = "0.7.3"
log = "0.4.17"
env_logger = "0.10.0"
serde_qs = "0.11.0"
spinach = "2.1.0"
ctrlc = "3.2.5"
petgraph = "0.6.3"
