[package]
name = "snapshot_analyse"
version = "0.1.0"
edition = "2021"
categories = ["snapshot_parser"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
serde_json = "1.0.74"
serde = { version = "1.0.133", features = ["derive"] }
js-sys = "0.3.55"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
petgraph = "0.6.0"
snapshot_parser = { path = "snapshot_parser" }

[dependencies.web-sys]
version = "0.3.55"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.19"
wasm-bindgen-futures = "0.4.28"

# fix build in m1 pro
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[workspace]
members = [
    "snapshot_parser"
]
