[package]
name = "snapshot_analyse"
version = "0.1.0"
edition = "2021"
description = "v8 snapshot_parser"
license = "AGPL-3.0"
authors = ["zhengrenzhe <zhengrenzhe0416@outlook.com>"]
documentation = "https://github.com/zhengrenzhe/heap-visualization"
homepage = "https://github.com/zhengrenzhe/heap-visualization"
repository = "https://github.com/zhengrenzhe/heap-visualization"
keywords = ["v8", "snapshot", "heap"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
petgraph = "0.6.0"
snapshot_parser = { path = "snapshot_parser" }

[dependencies.web-sys]
version = "0.3.56"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"
futures = "0.3.19"
wasm-bindgen-futures = "0.4.29"

[workspace]
members = [
    "snapshot_parser",
]
