[package]
name = "snapshot_parser"
version = "0.1.0"
edition = "2021"
description = "v8 snapshot_parser"
license = "AGPL-3.0"
authors = ["zhengrenzhe <zhengrenzhe0416@outlook.com>"]
documentation = "https://github.com/zhengrenzhe/heap-visualization"
homepage = "https://github.com/zhengrenzhe/heap-visualization"
repository = "https://github.com/zhengrenzhe/heap-visualization"
keywords = ["v8", "snapshot", "heap"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
